[package]
name = "dymod"
version = "0.2.0"
authors = ["Claire Harris <wishing.engine@gmail.com>"]
edition = "2018"
description = """A macro to allow hotswapping code for a module in debug mode, but statically linking it safely in release mode."""
repository = "https://github.com/Pirh/dymod"
readme = "README.md"
keywords = ["linking", "static", "dynamic", "hotswapping", "dylib"]
license = "CC0-1.0"

[badges]
travis-ci = { repository = "mistodon/dymod", branch = "master" }

[dependencies]
libloading = "~0.5.0"

[features]
default = []
force-static = []
force-dynamic = []
auto-reload = []
