[package]
name = "dymod"
version = "0.3.0"
authors = ["Vi <***redacted.email@redacted.nope***>"]
edition = "2018"
description = """A macro to allow hotswapping code for a module in debug mode, but statically linking it safely in release mode."""
repository = "https://github.com/Pirh/dymod"
readme = "README.md"
keywords = ["linking", "static", "dynamic", "hotswapping", "dylib"]
categories = ["game-development", "development-tools"]
license = "CC0-1.0"

[badges]
travis-ci = { repository = "mistodon/dymod", branch = "master" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = { version = "~0.5.0", optional = true }

[features]
default = ["auto-reload", "libloading"]
force-static = []
force-dynamic = ["libloading"]
auto-reload = []
