[package]
name = "dymod"
version = "0.1.0"
authors = ["Claire Harris <claire.harris.000@gmail.com>", "Kingsquee <kingsquee@nodev.club>"]
description = """A macro to allow hotswapping code for a module, or safely statically linking, depending on Cargo features."""
repository = "https://github.com/Pirh/dymod"
readme = "README.md"
keywords = ["linking", "static", "dynamic", "hotswapping", "dylib"]
license = "CC0-1.0"

[dependencies]
sharedlib = "~7.0.0"

[features]
hotswapping = []
