[package]
name = "test_dymod"
version = "0.1.0"
authors = ["Vi <violet@hey.com>"]
edition = "2021"

[dependencies.dymod]
path = ".."

[features]
default = ["dymod/auto-reload"]
force-static = ["dymod/force-static", "dymod/auto-reload"]
force-dynamic = ["dymod/force-dynamic"]
auto-reload = ["dymod/force-dynamic", "dymod/auto-reload"]
